--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="page">
@@ -15,12 +15,13 @@
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events">DOM Manipulation</a></button>
             <button id="button"><a href=https://www.theodinproject.com/lessons/foundations-etch-a-sketch>Etch-A-Sketch</a></button>
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch"></a>How to Grid</button>
+            <button id="button"><a href="https://www.youtube.com/watch?v=dyhuaXeuyGo">Reference</a></button>
         </div>
         <div class="container">Drawing Space:
             <div class = "drawingBoard"></div>
         </div>
         <div class="footer">Footer Here</div>
     </div>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
