Add html buttons and bugged functionality to add squares

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="page">
         <div class="header">Etch-A-Sketch</div>
         <div class="sidebar">Options here
-            <button id="button">How many pixels?</button>
+            <div class="sizingOptions">
+                <label for="sizeInput">Size of Drawing Space</label>
+                <input type="number" id="sizeInput" min="1" max="100" value="16" onchange="boardSize(this.value)">
+                <input type="submit" id="submit">
+            </div>
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events">DOM Manipulation</a></button>
             <button id="button"><a href=https://www.theodinproject.com/lessons/foundations-etch-a-sketch>Etch-A-Sketch</a></button>
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch"></a>How to Grid</button>
