implement coloring options: red, black, and eraser

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <div class="sizingOptions">
                 <label for="sizeInput">Size of Drawing Space</label>
                 <input type="number" id="sizeInput" min="1" max="100" value="16" onchange="boardSize(this.value)">
-                <input type="submit" id="submit">
+            </div>
+            <div>
+                <button id="blackButton" value="black">BLACK</button>
+                <button id="redButton" value="red">RED</button>
+                <button id="eraserButton" value=#f6eeee>ERASER</button>
+                <button id="clear">CLEAR</button>
             </div>
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events">DOM Manipulation</a></button>
             <button id="button"><a href=https://www.theodinproject.com/lessons/foundations-etch-a-sketch>Etch-A-Sketch</a></button>
