--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <div class="header">Etch-A-Sketch</div>
-        <div class="sidebar">Options here
+        <div class="sidebar">
             <div class="sizingOptions">
                 <label for="sizeInput">Size of Drawing Space</label>
                 <input type="number" id="sizeInput" min="1" max="100" value="16" onchange="boardSize(this.value)">
@@ -21,15 +21,17 @@
                 <button id="eraserButton" value=#f6eeee>ERASER</button>
                 <button id="clear">CLEAR</button>
             </div>
+            <!--
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events">DOM Manipulation</a></button>
             <button id="button"><a href=https://www.theodinproject.com/lessons/foundations-etch-a-sketch>Etch-A-Sketch</a></button>
             <button id="button"><a href="https://www.theodinproject.com/lessons/foundations-etch-a-sketch"></a>How to Grid</button>
             <button id="button"><a href="https://www.youtube.com/watch?v=dyhuaXeuyGo">Reference</a></button>
+            -->
         </div>
         <div class="container">Drawing Space:
             <div class = "drawingBoard"></div>
         </div>
-        <div class="footer">Footer Here</div>
+        <div class="footer"></div>
     </div>
     <script src="script2.js"></script>
 </body>
